tests/ok/std-boxed-box.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var boxed = std::boxed::new<i64>(ref mut zone, 21);

  let before = boxed.get();
  boxed.set(9);
  let after = boxed.get();

  zone::destroy(zone);
  return before + after;
}
