tests/errors/prelude-box-root-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let boxed = Box::new<i64>(ref mut zone, 21);
  zone::reset(ref mut zone);
  return boxed.get();
}
